# rusty-sudoku

./: Cargo.toml  README.md  dockerfile
src/: color.rs  endpoints.rs  main.rs
src/board/: board.rs  difficulty.rs  field.rs  generator.rs  info_extractor.rs  mod.rs  position.rs  solver.rs
src/board/validation/: mod.rs  rule_column_values.rs  rule_row_values.rs  rule_size.rs  rule_square_values.rs  validate.rs  validation_rule.rs
src/color/: Color.rs  HSV.rs  mod.rs
src/game/: BoardManager.rs  EGameState.rs  EPlacementState.rs  Game.rs  GameController.rs  GameControllerManager.rs  GameID.rs  mod.rs
src/game/player/: Player.rs  PlayerID.rs  PlayerManager.rs  PlayerToken.rs  mod.rs
src/messages/: mod.rs
src/messages/base/: NetworkField.rs  NetworkGameIdentifier.rs  NetworkGameState.rs  NetworkPlayerIdentifier.rs  NetworkPlayerToken.rs  PlayerListElement.rs  mod.rs
src/messages/incoming/: GameCreationRequest.rs  GameJoinLeaveRequest.rs  GameJoinRequest.rs  GameReadyRequest.rs  GameReadyUnreadyRequest.rs  GameSetFieldRequest.rs  GameStartRequest.rs  IRequest.rs  PlayerRegistrationRequest.rs  mod.rs
src/messages/outgoing/: GameJoinLeaveResponse.rs  GameStateResponse.rs  GamesListResponse.rs  IResponse.rs  PlayerRegistrationResponse.rs  mod.rs
src/player/: PlayerID.rs  mod.rs
src/server/: Endpoints.rs  Server.rs  mod.rs
src/server/websockets/: Messages.rs  Server.rs  Session.rs  mod.rs
static/: code.js  index.html  style.css
