[package]
name = "rusty-sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-broker = "0.4.3"
actix-files = "0.6.2"
actix-web = "4"
actix-web-actors = "4.2.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
